--- a/css/main.css
+++ b/css/main.css
@@ -1,49 +1,50 @@
-main {
-    background-color:#ffffff;
-    padding: 1em;
-}
-
-header {
-  background-color:black;
-  padding: 10px;
-  font-size: 35px;
-  color: white;
-  text-align: center;
-  display: grid;
-  grid-auto-flow: column;
-
-}
-
 body {
-    background-color:white;
-    font-family: Arial, Helvetica, sans-serif;
-  }
+    background-color: white;
+    font-family: 'Roboto', sans-serif;
+}
+#index-main {
+    max-width: 800px;
+    margin: 0 auto;
+}
+header, footer {
+    background-color: green;
+    color: white;
+    padding: 8px;
+    border-radius: 25px;
+}
+header h1 {
+    font-size: 32px;
+    margin: 0.15rem;
+    grid-column: 2/3;
+}
+main {
+    padding: 0 15px;
+}
+main h2 {
+    font-size: 1rem;
+    border-bottom: 1px solid black;
+}
+.profile {
+    max-width: 100px;
+    height: auto;
+}
 
-  footer {
-    background-color:#666;
-    padding: 30px;
-    text-align: center;
-    color: black;
-  }
-  
-  #content {
-    max-width: 960px;
-    margin: auto;
-    margin-left: auto;
-    margin-right: auto;
-    }
-
-    img {
-        max-width: 100%;
-        border-radius: 10%;
-      }
-
-      #currentdate { color:white;
-
-      }
-
-      ul li {
-        
-        margin: 5px;
-        padding: 5px;
-      }
+footer a, footer a:link, footer a:visited, footer a:hover, footer a:active, footer a:focus {
+    color: white;
+}
+footer a:hover {
+    color: #ddd;
+}
+footer {
+    clear:both;
+    text-align:center;
+}
+footer p.legal {
+    margin-bottom:9px;
+    font-size: .9em;
+}
+footer p.highlight {
+    color: yellow;
+    font-size:.8em;
+    margin-top:0;
+}
