--- a/lesson1/css/medium.css
+++ b/lesson1/css/medium.css
@@ -1,16 +1,5 @@
-@media only screen and (min-width: 32.5em) {
-    h1 {
-        font-size: 2.5em;
+@media only screen and (min-width: 33em) {
+    #mainColumns {
+        grid-template-columns: 1fr 1fr;
     }
-    h2 {
-        font-size: 1.5em;
-    }
-    header, footer {
-        border-radius: 10px;
-    }
-    header img {
-        box-shadow: 0 0 10px 5px rgba(143, 143, 143, 1);
-        float: right;
-    }
-
 }
