--- a/lesson1/css/small.css
+++ b/lesson1/css/small.css
@@ -2,83 +2,58 @@
 body {
 	font-family: 'Roboto', sans-serif;
 }
-header, footer {
-	background-color: rgb(4, 22, 61);
-	color: rgba(255, 255, 255, 1);
-	padding: 5px;
-	text-align: center;	
-}
 header, footer, main {
-	max-width: 600px;
+	max-width: 66em;
 	margin: 0 auto;
-}
-h1 {
-	font-family: 'Roboto', sans-serif;
-	font-size: 1.5em;
-}
-h2 {
-	font-size: 1em;
-}
-header img {
-	height: 151px;
-	width: auto;
-}
-main {
-	padding-left: 20px;
-}
-li a {
-	color: rgb(4, 22, 61);
-	text-decoration: none;
-}
-li a:hover {
-	color: rgba(143, 143, 143, 1);
-}
-
-footer p a {
-	color: rgba(255, 255, 255, 1);
-}
-footer p a:hover {
-	color: rgba(143, 143, 143, 1);
-}
-/* @import url(''https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap'); */
-body {
-	font-family: 'Roboto', sans-serif;
 }
 header, footer {
 	background-color: rgb(4, 22, 61);
 	color: rgba(255, 255, 255, 1);
 	padding: 5px;
-	text-align: center;	
-}
-header, footer, main {
-	max-width: 600px;
-	margin: 0 auto;
+    text-align: center;	
+    border-radius: 10px;
 }
 h1 {
 	font-family: 'Roboto', sans-serif;
-	font-size: 1.5em;
 }
-h2 {
-	font-size: 1em;
-}
-header img {
-	height: 151px;
-	width: auto;
-}
-main {
-	padding-left: 20px;
-}
-li a {
+a {
 	color: rgb(4, 22, 61);
 	text-decoration: none;
 }
-li a:hover {
+a:hover {
 	color: rgba(143, 143, 143, 1);
 }
-
 footer p a {
 	color: rgba(255, 255, 255, 1);
 }
 footer p a:hover {
-	color: rgba(143, 143, 143, 1);
+	color: rgba(78, 78, 78, 1);
 }
+#mainColumns {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-gap: 5px;
+	padding: 5px;
+}
+section {
+	margin: 5px;
+	border: 1px solid rgb(4, 22, 61);
+	background-color: rgba(255, 4, 4, 0.486);
+	width: auto;
+	border-radius: 10px;
+}
+h3 {
+    text-align: center;
+    margin: 0;
+	background-color: rgb(4, 22, 61);
+	color: rgba(255, 255, 255, 1);
+	border-radius: 10px 10px 0px 0px;
+	padding: 10px;
+}
+section p {
+    margin: 15px;
+}
+picture img {
+	max-width: 90%;
+	padding: 15px;
+} 
