--- a/lesson1/css/small.css
+++ b/lesson1/css/small.css
@@ -38,7 +38,7 @@ footer p a:hover {
 section {
 	margin: 5px;
 	border: 1px solid rgb(4, 22, 61);
-	background-color: rgba(255, 4, 4, 0.486);
+	background-color: rgb(255, 104, 4);
 	width: auto;
 	border-radius: 10px;
 }
