--- a/lesson1/css/small.css
+++ b/lesson1/css/small.css
@@ -19,6 +19,7 @@ h1 {
 a {
 	color: rgb(4, 22, 61);
 	text-decoration: none;
+	text-align: center;	
 }
 a:hover {
 	color: rgba(143, 143, 143, 1);
@@ -52,6 +53,7 @@ h3 {
 }
 section p {
     margin: 15px;
+	text-align: center;	
 }
 picture img {
 	max-width: 90%;
