--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -56,10 +56,10 @@ footer p a:hover {
 	background-color: #ffffff;
 }
 .backgroundteal {
-	background-color: #f2be54;
+	background-color: #0A8BA1;
 }
 .backgroundteal2 {
-	background-color: #cacfd4;
+	background-color: #09C1C5;
 }
 .backgroundDarkBlue {
 	background-color: #153e5c;
