--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -1,61 +1,169 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto',sans-serif;
 }
-header, footer, main {
-	max-width: 66em;
+header, footer, main, nav {
+	max-width: 80em;
 	margin: 0 auto;
 }
 header, footer {
-	background-color: rgb(4, 22, 61);
-	color: rgba(255, 255, 255, 1);
-	padding: 5px;
-    text-align: center;	
-    border-radius: 10px;
+	background-color: #153e5c;
+	color: #ffffff;
+	padding: 15px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	flex-direction: column;
+}
+main {
+	padding: 15px;
+}
+section p, section img {
+	padding-left: 15px;
+} 
+img {
+	max-width: 100%;
+	height:	auto;
+}
+li {
+	list-style-type: none;
 }
 h1 {
-	font-family: 'Roboto', sans-serif;
+	font-size: 30px;
 }
-a {
-	color: rgb(4, 22, 61);
-	text-decoration: none;
-	text-align: center;	
-}
-a:hover {
-	color: rgba(143, 143, 143, 1);
-}
-footer p a {
-	color: rgba(255, 255, 255, 1);
-}
-footer p a:hover {
-	color: rgba(78, 78, 78, 1);
-}
-#mainColumns {
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-gap: 5px;
-	padding: 5px;
-}
-section {
-	margin: 5px;
-	border: 1px solid rgb(4, 22, 61);
-	background-color: rgb(251, 233, 194);
-	width: auto;
-	border-radius: 10px;
+h2 {
+	font-size: 20px;
 }
 h3 {
-    text-align: center;
-    margin: 0;
-	background-color: rgb(4, 22, 61);
-	color: rgba(255, 255, 255, 1);
-	border-radius: 10px 10px 0px 0px;
-	padding: 10px;
+	font-size: 16px;
 }
-section p {
-    margin: 15px;
-	text-align: center;	
+h4 {
+	text-decoration: underline;
+	font-size: 16px;
 }
-picture img {
-	max-width: 90%;
+a {
+	text-decoration: none;
+}
+footer p a {
+	color: #ffffff;
+}
+footer p a:hover {
+	color:  #87aeb4;
+}
+/* background colors */
+.backgroundWhite {
+	background-color: #ffffff;
+}
+.backgroundteal {
+	background-color: #0A8BA1;
+}
+.backgroundteal2 {
+	background-color: #09C1C5;
+}
+.backgroundDarkBlue {
+	background-color: #153e5c;
+}
+.backgroundBlack {
+	background-color: #000000;
+}
+/* text colors */
+.textWhite {
+	color: #ffffff;
+}
+.textYellow {
+	color: #f2be54;
+}
+.textGrey {
+	color: #cacfd4;
+}
+.textDarkBlue {
+	color: #153e5c;
+}
+.textBlack {
+	color: #000000;
+}
+/* tezt sizes */
+.size16 {
+	font-size: 16px;
+}
+.size20 {
+	font-size: 20px;
+}
+.size25 {
+	font-size: 25px;
+}
+.size30 {
+	font-size: 30px;
+}
+.size40 {
+	font-size: 40px;
+}
+/* color-scheme table settings */
+#colorTable {
+	border-collapse: collapse;
+	margin: 15px;
+}
+#colorTable tr {
+	height: 300px;
+}
+#colorTable tr td {
+	text-align: center;
+	vertical-align: bottom;
+	width: 250px;
 	padding: 15px;
-} 
+}
+#colorTable tr td:nth-child(1), 
+#colorTable tr td:nth-child(5) {
+	display: none;
+}
+/*typography table settings */
+#typographyTable {
+	border-collapse: collapse;
+	margin: 15px;
+	font-size: 10px;
+}
+#typographyTable tr td, #typographyTable tr th {
+	border:1px solid #000000;
+	padding: 5px;
+	width: 250px;
+}
+#typographyTable tr td:nth-child(2), 
+#typographyTable tr th:nth-child(2),
+#typographyTable tr td:nth-child(4), 
+#typographyTable tr th:nth-child(4),
+#typographyTable tr td:nth-child(5), 
+#typographyTable tr th:nth-child(5) {
+	display: none;
+}
+/* navigation area - top */
+nav {
+	background-color: #0A8BA1;	
+	text-align: center;
+}
+nav ul {
+	display: flex;
+	margin: 0;
+	padding: 0;
+	justify-content: center;
+	flex-direction: column;
+}
+nav ul li {
+	padding: 15px;
+	flex: 1 1 auto; /* nav buttons span full width*/
+}
+nav ul li a {
+	padding: 15px;
+	font-size: 16px;
+	color: #000000;
+}
+nav a:hover {
+	color: #ffffff;
+}
+.active {
+	background-color: #cacfd4;
+	height: 23px;
+}
+.active a:hover {
+	color: #000000;
+}
