--- a/weather/css/large.css
+++ b/weather/css/large.css
@@ -11,10 +11,7 @@
     h4 {
         font-size: 20px;
     }
-    nav ul li a {
+    .navigation a {
         font-size: 20px;
-    }
-    #typographyTable tr td, #typographyTable tr th {
-        padding: 15px;
     }
 }
