--- a/weather/css/medium.css
+++ b/weather/css/medium.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 40em) {
     h1 {
-        font-size: 35px;
+        font-size: 30px;
     }
     h2 {
         font-size: 25px;
@@ -8,32 +8,36 @@
     h3 {
         font-size: 20px;
     }
-    h4 {
+    p {
         font-size: 16px;
+    }
+    header img {
+        width: 128px;
+    }
+    .headings h1 {
+        font-size: 40px;
+    }
+    .moto {
+        font-size: 22px;
+    }
+	.navigation {
+		display: flex;
+	}
+	.navigation li {
+        flex: 1 1 auto;
+		display: block;
+	}
+	.navigation li:first-child {
+		display: none;
+    }
+    .navigation a {
+        font-size: 18px;
     }
     nav ul {
         flex-flow: row wrap;
     }
-    nav ul li a {
-        font-size: 16px;
-    }
-    #typographyTable {
-        font-size: 16px;
-    }
-    #typographyTable tr td, #typographyTable tr th {
-        padding: 12px;
-    }
-    #typographyTable tr td:nth-child(2), 
-    #typographyTable tr th:nth-child(2),
-    #typographyTable tr td:nth-child(4), 
-    #typographyTable tr th:nth-child(4),
-    #typographyTable tr td:nth-child(5), 
-    #typographyTable tr th:nth-child(5) {
-	    display: revert;
-    }
-    #colorTable tr td:nth-child(1), 
-    #colorTable tr td:nth-child(5) {
-        display: revert;
+    footer p {
+        font-size: 20px;
     }
 
 }
