--- a/lesson1/css/medium.css
+++ b/lesson1/css/medium.css
@@ -1,5 +1,8 @@
-@media only screen and (min-width: 33em) {
-    #mainColumns {
-        grid-template-columns: 1fr 1fr;
-    }
+main {
+    grid-template-columns: 1fr 1fr;
+}
+main > section:nth-of-type(3) {
+    grid-column: span 2;
+    width: 50%;
+    justify-self: center;
 }
