--- a/chamber1/css/small.css
+++ b/chamber1/css/small.css
@@ -92,6 +92,7 @@ footer {
 	align-items: center;
 	justify-content: center;
 	text-align: center;
+	color: var(--default-light);
 }
 footer p {
 	font-size: 14px;
