--- a/chamber2/css/small.css
+++ b/chamber2/css/small.css
@@ -33,8 +33,8 @@
 
 
 * {
-	margin: 0;
-	padding: 0;
+	margin:0;
+	padding:0%;
 	box-sizing:border-box;
     font-family: 'Lato', sans-serif;
 }
@@ -259,5 +259,5 @@ footer p {
 }
 
 span {
-    display: inline-block;
+    display:inline-flex;
 }
