--- a/chamber3/css/small.css
+++ b/chamber3/css/small.css
@@ -1,40 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
-
-.primary {
-    background-color: #004369;
-    color: #f4f7f5;
-    height: 300px;
-}
-.secondary {
-    background-color: #01949A;
-    color: #f4f7f5;
-    height: 300px;
-}
-.accent1 {
-    background-color: #d10812;
-    color: #f4f7f5;
-    height: 300px;
-}
-.accent2 {
-    background-color: #dee5e5;
-    height: 300px;
-}
-.accent3 {
-    background-color: #f4f7f5;
-    height: 300px;
-}
-
 .colored {
     background-color: white;
     color: #f4f7f5;
 }
 
-
 * {
-	margin:0;
-	padding:0%;
+	margin: 0;
+	padding: 0;
 	box-sizing:border-box;
     font-family: 'Lato', sans-serif;
 }
@@ -47,14 +21,13 @@ h1, h2, h3, h4 {
 }
 
 header {
-	background-color: #004369;
+	background-color: #15616D;
 	display: grid;
     grid-template-columns: 5fr 1fr 1fr;
 	align-items: center;
 	justify-content: center;
-	padding: 10px;
+	padding: 8px;
 	color: #f4f7f5;
-
 }
 
 header div {
@@ -63,11 +36,11 @@ header div {
 }
 
 header div #datetime{
-    background-color: none;
-    color: #E5DDC8;
-    margin: 0 auto;
+    background-color: white;
+    color: black;
+    margin: 10px;
     padding: 10px;
-    width: 30%; 
+    width: 100%; 
 }
 
 .date-header {
@@ -83,12 +56,12 @@ header div #datetime{
 }
 
 footer {
-	background-color: #004369;
+	background-color: #15616D;
 	display: flex;
 	flex-flow: column;
 	align-items: center;
 	justify-content: center;
-/*	padding: 1px; */
+	padding: 10px; 
     font-size: 15px;
     color: white;
 }
@@ -101,7 +74,6 @@ footer {
 	margin: 0 auto;
 }
 
-
 h1 {
 	font-size: 2rem;
 }
@@ -109,7 +81,6 @@ h2 {
 	padding: .5rem;
 	color: black;
 }
-
 
 p {
 	padding: .5rem;
@@ -167,12 +138,12 @@ header div nav ul li a {
 }
 
 header div nav ul li.active a {
-    background-color: #01949A;
-    color:#fff;
+    background-color: #ff7d00;
+    color: black;
 }
 
 header div nav ul li a:hover {
-    background-color: #DB1F48;
+    background-color: #ff7d00;
 }
 
 header div nav ul {
@@ -189,10 +160,7 @@ header div nav ul.open {
 #hamburguerBtn.open span:nth-child(1) {display: none}
 #hamburguerBtn.open span:nth-child(2) {display: block}
 
-
-
 main {
-	align-items: center;
 	justify-content: center;
 	font-size: 0.85rem;
     padding: 0.5rem;
@@ -209,11 +177,14 @@ header div nav {
 footer {
 	display: flex;
 	padding: 1rem;
-	justify-content:space-evenly;
-/*	font-weight: 200; */
+	justify-content:space-between;
+    font-weight: 700; 
     margin-top: 1rem;
 }
 
+.title-footer h2 {
+    color: white;
+}
 
 main h1, h2, h3, h4, p, li {
     padding: 10px;
@@ -223,14 +194,12 @@ li {
     margin-left: 40px;
 }
 
-
 aside {
-    background-color: #01949A;
+    background-color: #141adb;
     padding: 10px;
 }
 
 main div {
-    height: 150px;
     background-color: #DEE5E5;
     margin-bottom: 10px;
     padding: 10px;
@@ -259,5 +228,56 @@ footer p {
 }
 
 span {
-    display:inline-flex;
+    display: inline-block;
+}
+
+.hero {
+    position: relative;
+    padding: 0; 
+}
+.banner {
+    position: relative;
+    margin: 0;
+    width: 100%;
+    min-height: 100%;
+}
+
+.call-to-action {
+    position: absolute;
+    bottom: 8px;
+    right: 0px;
+    padding: 12px;
+    min-width: 100px;;
+    width: 50%;
+    background-color: #18c6f1;
+    box-shadow: 0 10px 30px #121335;
+    border: none;
+}
+
+.call-to-action:hover {
+    background-color: #c5b205;
+}
+
+.text-join {
+    padding: 15px;
+    text-align: center;
+}
+
+.banner-message {
+    width: 100%;
+    background-color: #ff7d00;
+    color: #DEE5E5;
+    padding: 8px;
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+#temperature {
+    text-align: right;
+    font-size: 36px;
+    right: 15px;
+}
+
+.contact a {
+    font-size: 20px;
 }
