--- a/chamber3/css/small.css
+++ b/chamber3/css/small.css
@@ -21,7 +21,7 @@ h1, h2, h3, h4 {
 }
 
 header {
-	background-color: #15616D;
+	background-color: #004369;
 	display: grid;
     grid-template-columns: 5fr 1fr 1fr;
 	align-items: center;
@@ -56,7 +56,7 @@ header div #datetime{
 }
 
 footer {
-	background-color: #15616D;
+	background-color: #004369;
 	display: flex;
 	flex-flow: column;
 	align-items: center;
@@ -131,19 +131,19 @@ header div nav ul li a {
     padding: .8rem 2vw;
     text-decoration: none;
 	color: #f4f7f5;
-    border-top: 1px solid rgb(46, 120, 139); ;
+    border-top: 1px solid rgb(39, 49, 185); ;
     font-size: 0.8rem;
     margin: 0;
     text-align: center;
 }
 
 header div nav ul li.active a {
-    background-color: #ff7d00;
-    color: black;
+    background-color: #017b9a;
+    color: rgb(245, 243, 243);
 }
 
 header div nav ul li a:hover {
-    background-color: #ff7d00;
+    background-color: #0077ff;
 }
 
 header div nav ul {
@@ -195,7 +195,7 @@ li {
 }
 
 aside {
-    background-color: #141adb;
+    background-color: #004369;
     padding: 10px;
 }
 
@@ -255,7 +255,7 @@ span {
 }
 
 .call-to-action:hover {
-    background-color: #c5b205;
+    background-color: #c50505;
 }
 
 .text-join {
