--- a/chamber3/css/small.css
+++ b/chamber3/css/small.css
@@ -145,7 +145,7 @@ header div nav ul li a {
 
 header div nav ul li.active a {
     background-color: #017b9a;
-    color: rgb(245, 243, 243);
+    color: white;
 }
 
 header div nav ul li a:hover {
@@ -322,8 +322,8 @@ main figure.myphoto figcaption {text-align: center; font-size: .75rem;}
 main picture.optipic img {width: 100%;}
 
 
-picture.optipic {
-    display: block;
-    width: 96%;
-    margin: 0 2%;
-}
+.hero img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
