--- a/chamber4/css/large.css
+++ b/chamber4/css/large.css
@@ -57,11 +57,11 @@
         display: block;
   /*      margin-bottom: 0px; */
     }
-        
-    sidemenu div {
-        margin: 10px auto;
-    }
-    
+   
+    .joinbutton {
+		grid-column: 1/2;
+		grid-row: 3/3;
+	}
     .hero {
         grid-column: 2/4;
         grid-row: 1/3;
@@ -85,7 +85,7 @@
         margin-bottom: 0;
     }
     
-    .weater {
+    .weather {
         grid-column: 1/2;
         grid-row: 2/3;
         width: 100%;
