--- a/chamber4/css/small.css
+++ b/chamber4/css/small.css
@@ -19,13 +19,13 @@ body {
 h1, h2, h3, h4 {
     font-family: 'Playfair Display', serif;
 }
-
 /*----Top-page banner----*/
 #top-page-banner {
     text-align: center;
     padding: 10px;
     background-color: #FCA311;
 }
+
 header {
 	background-color: #004369;
 	display: grid;
@@ -70,6 +70,10 @@ footer {
 	padding: 10px; 
     font-size: 15px;
     color: white;
+}
+
+.title-footer h2 {
+color: white;
 }
 
 header,
@@ -145,11 +149,12 @@ header div nav ul li a {
 
 header div nav ul li.active a {
     background-color: #017b9a;
-    color: rgb(245, 243, 243);
+    color: white;
 }
 
 header div nav ul li a:hover {
-    background-color: #0077ff;
+    background-color: #017b9a;
+    color: white;
 }
 
 header div nav ul {
@@ -184,12 +189,8 @@ footer {
 	display: flex;
 	padding: 1rem;
 	justify-content:space-between;
-    font-weight: 700; 
+font-weight: 700; 
     margin-top: 1rem;
-}
-
-.title-footer h2 {
-    color: white;
 }
 
 main h1, h2, h3, h4, p, li {
@@ -225,6 +226,7 @@ footer p {
     text-align: center;
 }
 
+
 .date-header {
     text-align: center;
 }
@@ -248,6 +250,18 @@ span {
     min-height: 100%;
 }
 
+.join-us {
+    width: 100%;
+    margin-top: 20px;
+    padding: 12px;
+    background-color: #18c6f1;
+    border-radius: 5px;
+    border: none;
+}
+
+.join-us:hover{
+    background-color: #ff7d00;
+}
 .call-to-action {
     position: absolute;
     bottom: 8px;
@@ -261,7 +275,7 @@ span {
 }
 
 .call-to-action:hover {
-    background-color: #c50505;
+    background-color: #ff7d00;
 }
 
 .text-join {
@@ -278,14 +292,30 @@ span {
     margin: 0 auto;
 }
 
-#temperature {
+#temp {
     text-align: right;
-    font-size: 36px;
-    right: 15px;
-}
+    font-size: 30px;
+    right: 10px;
+} 
 
 .contact a {
     font-size: 20px;
+}
+
+.weather-div {
+    display: inline;
+}
+
+.weather p {
+    position: relative;
+    padding-left: 0;
+    margin-left: 0;
+    padding-bottom: 0.5px;
+}
+
+.weather-div picture img {
+    width: 90px;
+    position: absolute;
 }
 
 main figure.myphoto img {width: 100%;}
