--- a/lesson7/css/large.css
+++ b/lesson7/css/large.css
@@ -1,5 +1,12 @@
-@media (min-width: 48em) {
+@media (min-width: 1100px) {
 	
+    header,
+    main,
+    footer,
+    nav {
+        max-width: 1000px;
+    }
+
     header div button {
         display: none;
     }
@@ -17,12 +24,27 @@
     
     nav ul li a {
         padding: .5rem 1rem;
+        font-size: 20px;
     }
     
         main {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
     
+    header img {
+        width: 100%;
+    }
+
+    .heading h1 {
+        font-size: 30px;
+    }
+
+
+    h2 {
+        font-size: 25px;
+        text-align: left;
+    }
+
     .menu {
         grid-column: 2/3;
         grid-row: 1/4;
@@ -55,13 +77,18 @@
     }
     .spotlight3 {
         display: block;
-  /*      margin-bottom: 0px; */
     }
    
     .joinbutton {
 		grid-column: 1/2;
 		grid-row: 3/3;
 	}
+
+    .localstoragebutton{
+        grid-column: 1/2;
+		grid-row: 3/3;
+    }
+
     .hero {
         grid-column: 2/4;
         grid-row: 1/3;
@@ -70,22 +97,29 @@
         margin-bottom: 0;
       }
     
+      .herodiscover {
+        grid-column: 2/4;
+        grid-row: 1/2;
+        width: 100%;
+        height: 100%;
+        margin-bottom: 0;
+      }
     .news {
         grid-column: 2/4;
-        grid-row: 3/4;
+        grid-row: 3/3;
         width: 100%;
         height: 100%;
     }
     
     .event {
         grid-column: 1/2;
-        grid-row: 1/2;
+        grid-row: 1/3;
         width: 100%;
         height: 100%;
         margin-bottom: 0;
     }
     
-    .weather {
+    .weater {
         grid-column: 1/2;
         grid-row: 2/3;
         width: 100%;
@@ -98,7 +132,6 @@
         width: 100%;
         height: 100%;
     }   
-    }
     
     main {
         max-width: 1000px;
@@ -160,4 +193,4 @@
     herodiscover, .event, .lazyloading {
         grid-row:1/2
     }
-
+}
