--- a/lesson7/css/medium.css
+++ b/lesson7/css/medium.css
@@ -2,8 +2,16 @@
 /** Media Queries for Medium views *************/
 /***********************************************/
 
-@media (min-width: 37.5em) {
+@media only screen and (min-width: 768px)  {
 	
+	nav ul {
+        display: flex;
+    }
+
+    nav ul li {
+        flex: 1 1 100%;
+    }
+
 	aside {
 		display: flex;
 		flex-direction: row;
@@ -23,6 +31,7 @@
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-gap: 1em;
+		max-width: 800px;
 	}
 
 	.hero {
@@ -30,6 +39,10 @@
 		grid-row: 1/2;
 	}
 
+	.herodiscover {
+		grid-column: 1/4;
+		grid-row: 1/2;
+	}
 	.news {
 		grid-column: 1/4;
 		grid-row: 3/4;
@@ -52,7 +65,7 @@
 		grid-row: 2/3;
 	}
 
-	.weather {
+	.weater {
 		grid-column: 3/4;
 		grid-row: 2/3;
 	}
@@ -139,3 +152,4 @@
 	font-family: 'Lato', sans-serif;
 	border: thin silver solid;
 }
+
