--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -193,4 +193,20 @@
     herodiscover, .event, .lazyloading {
         grid-row:1/2
     }
+    herojoin, .event, .lazyloading {
+        grid-row:1/2
+    }
+    .herojoin{
+        grid-column: 2/4;
+        grid-row: 1/2;
+        width: 100%;
+        height: 100%;
+        margin-bottom: 0;
+      }
+
+
+
+
+
 }
+
