--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -190,18 +190,10 @@
         padding-top: 10px;
         padding: 5px;
     }
-    herodiscover, .event, .lazyloading {
-        grid-row:1/2
-    }
-    herojoin, .event, .lazyloading {
-        grid-row:1/2
-    }
-    .herojoin{
-        grid-column: 2/4;
-        grid-row: 1/2;
-        width: 100%;
-        height: 100%;
-        margin-bottom: 0;
+    .herojoin {
+        margin: 0px;
+        padding-top: 10px;
+        padding: 5px;
       }
 
 
