--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,5 +1,5 @@
 @media (min-width: 1100px) {
-	
+
     header,
     main,
     footer,
@@ -10,27 +10,27 @@
     header div button {
         display: none;
     }
-    
+
     nav ul#primaryNav {
         display: flex;
         justify-content: flex-end;
-        border-left: 1px solid rgba(0,0,0,0.3);
+        border-left: 1px solid rgba(0, 0, 0, 0.3);
     }
-    
+
     nav ul li a {
         border: none;
-        border-right: 1px solid rgba(0,0,0,0.3)
+        border-right: 1px solid rgba(0, 0, 0, 0.3)
     }
-    
+
     nav ul li a {
         padding: .5rem 1rem;
         font-size: 20px;
     }
-    
-        main {
+
+    main {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
-    
+
     header img {
         width: 100%;
     }
@@ -49,19 +49,19 @@
         grid-column: 2/3;
         grid-row: 1/4;
     }
-    
+
     .headname {
         grid-column: 1/2;
         grid-row: 1/2;
     }
-    
-    .social{
+
+    .social {
         grid-column: 3/4;
         grid-row: 1/2;
         justify-content: flex-end;
-    
+
     }
-    
+
     aside {
         grid-column: 4/5;
         grid-row: 1/4;
@@ -69,24 +69,25 @@
         flex-direction: column;
         height: 100%;
     }
-    
+
     aside div {
         margin: 0;
         margin-bottom: 10px;
 
     }
+
     .spotlight3 {
         display: block;
     }
-   
-    .joinbutton {
-		grid-column: 1/2;
-		grid-row: 3/3;
-	}
 
-    .localstoragebutton{
+    .joinbutton {
         grid-column: 1/2;
-		grid-row: 3/3;
+        grid-row: 3/3;
+    }
+
+    .localstoragebutton {
+        grid-column: 1/2;
+        grid-row: 3/3;
     }
 
     .hero {
@@ -95,22 +96,23 @@
         width: 100%;
         height: 100%;
         margin-bottom: 0;
-      }
-    
-      .herodiscover {
+    }
+
+    .herodiscover {
         grid-column: 2/4;
         grid-row: 1/2;
         width: 100%;
         height: 100%;
         margin-bottom: 0;
-      }
+    }
+
     .news {
         grid-column: 2/4;
         grid-row: 3/3;
         width: 100%;
         height: 100%;
     }
-    
+
     .event {
         grid-column: 1/2;
         grid-row: 1/3;
@@ -118,21 +120,21 @@
         height: 100%;
         margin-bottom: 0;
     }
-    
+
     .weater {
         grid-column: 1/2;
         grid-row: 2/3;
         width: 100%;
         height: 100%;
     }
-    
+
     .join {
         grid-column: 1/2;
         grid-row: 3/4;
         width: 100%;
         height: 100%;
-    }   
-    
+    }
+
     main {
         max-width: 1000px;
         margin: 0 auto;
@@ -144,15 +146,16 @@
         display: flex;
         flex-direction: column;
         height: 100%;
-}
+    }
 
-.mygallery {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
+    .mygallery {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
 
-}
+    }
+
     .mygallery img {
         max-width: 100%;
     }
@@ -180,7 +183,7 @@
         font-weight: bolder;
         font-size: larger;
     }
-    
+
     .today {
         color: tomato;
     }
@@ -190,15 +193,26 @@
         padding-top: 10px;
         padding: 5px;
     }
+
     .herojoin {
-        margin: 0px;
+        max-width: 1000px;
+        margin: 0 auto;
         padding-top: 10px;
-        padding: 5px;
-      }
-
-
-
-
+        padding: 5px 0 0;
+    }
+    /* directory */
+    .directory-container {
+        flex-direction: row;
+        max-width: 1000px;
+    }
+    .directory-menu {
+        width: 20%;
+    }
+    .directory-content {
+        width: 100%;
+    }
+    .page-title {
+        margin: 20px 0 0 0;
+    }
 
 }
-
